# expurgator

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  tests.yml
src/: archive.rs  cli.rs  main.rs  util.rs
tests/: all.rs
tests/archives/: tar-test.tar.xz
tests/assets/: tar-test.csv
