[package]
name = "expurgator"
version = "0.1.5"
edition = "2021"
description = "remove files from archive formats based on a CSV file"
licence = "MIT"
authors = ["Attila Repka"]

[package.metadata.deb]
revision = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.5"
indicatif = "0.17.11"
xz2 = "0.1"
tar = "0.4"
zip = "3.0.0"
flate2 = "1.1"
bzip2 = "0.5"
infer = "0.19"
clap = { version = "4.5.38", features = ["derive"] }
csv = "1.3"
anyhow = "1.0.98"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
assert_fs = "1.1.3"
