[package]
name = "expurgator"
version = "0.1.5"
edition = "2021"
description = "remove files from archive formats based on a CSV file"
licence = "MIT"
authors = ["Attila Repka"]

[package.metadata.deb]
revision = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.9.3"
indicatif = "0.18.3"
xz2 = "0.1"
tar = "0.4"
zip = "7.4.0"
flate2 = "1.1"
bzip2 = "0.6"
infer = "0.19"
clap = { version = "4.5.57", features = ["derive"] }
csv = "1.4"
anyhow = "1.0.101"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
assert_fs = "1.1.3"
